# bimini_msgs

./: CMakeLists.txt  package.xml
msg/: BuildingElement.msg  BuildingFloor.msg  BuildingModel.msg  BuildingRoom.msg  KeyValue.msg
srv/: ExportSimulationModel.srv  GenerateNavigationMap.srv  LoadBuilding.srv  QueryBuildingElement.srv
